--- a/site/assets/sass/style.scss
+++ b/site/assets/sass/style.scss
@@ -1,13 +1,57 @@
 body {
   padding-top: 50px;
+  padding-bottom: 20px;
 }
 
 footer {
   padding: 30px 0;
 }
 
-.navbar-toggle {
-	margin-right: 0px;
+h1, h2, h3, h4, h5 {
+	color: #333;
+}
+
+.navbar-inverse {
+	background-color: #0088cc;
+	border-color: #ddd;
+
+	.navbar-nav {
+		li {
+			a {
+				color: #ddd;
+			}
+		}
+
+		li.active {
+			a {
+				background-color: #0091d9;
+			}
+		}
+
+		li.active:hover {
+			a {
+				background-color: #009be9;
+			}
+		}
+	}
+
+	.navbar-collapse {
+		border-color: #0088cc;
+	}
+
+	.navbar-toggle {
+		margin-right: 0px;
+		border-color: #0088cc;
+		background-color: #0091d9;
+	}
+
+	.navbar-toggle:active, .navbar-toggle:visited, .navbar-toggle:focus {
+		background-color: #0091d9;
+	}
+
+	.navbar-toggle:hover {
+		background-color: #009be9;
+	}
 }
 
 .align-center {
@@ -18,19 +62,62 @@ footer {
 	text-align: right;
 }
 
+#sectionResume {
+	.glyphicon {
+		color: #ddd;
+	}
+
+	.glyphicon.set {
+		color: #0088cc;
+	}
+}
+
+.panel {
+	margin-top: 20px;
+	margin-bottom: 0px;
+	border-color: #0088cc;
+
+	.panel-heading {
+		background-color: #0088cc;
+		color: #fff;
+	}
+}
+
 #sectionResume, #sectionPortfolio {
 	display: none;
 }
 
 #sectionAbout {
-	h1, h4 {
-		text-align: center;
+	margin-top: 20px;
+
+	h3 {
+		margin-top: 0px;
+	}
+}
+
+#sectionAbout, #sectionPortfolio {
+	img {
+		max-width: 100%;
+		height: auto;
 	}
 }
 
 .icon {
-  width: 32px;
-  height: 32px;
-  float: left;
-  margin-right: 10px;
+	width: 32px;
+	height: 32px;
+	margin-right: 10px;
+}
+
+@media (max-width: 767px) {
+	#sectionAbout {
+		h3 {
+			text-align: center;
+		}
+
+		.contact {
+			p {
+				text-align: center;
+			}
+		}
+	}
 }
