--- a/site/assets/sass/style.scss
+++ b/site/assets/sass/style.scss
@@ -106,6 +106,7 @@ h1, h2, h3, h4, h5 {
 	width: 32px;
 	height: 32px;
 	margin-right: 10px;
+	margin-left: 0px;
 }
 
 @media (max-width: 767px) {
@@ -119,5 +120,10 @@ h1, h2, h3, h4, h5 {
 				text-align: center;
 			}
 		}
+	}
+
+	.icon {
+		margin-right: 5px;
+		margin-left: 5px;
 	}
 }
