--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,8 @@
     <div class="container flex">
         <a id="logo" href="{{ site.baseurl }}/"><img src="assets/images/logo.png" alt="Logo" /></a>
         <div>
-            <a href="http://linkedin.com/in/jonathanawhitney" target="_blank"><i class="fab fa-linkedin-in fa-2x"></i></a>
-            <!-- <a href="http://github.com/jawhitney" target="_blank"><i class="fab fa-github fa-2x"></i></a> -->
+            <a href="http://linkedin.com/in/jonathanawhitney" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+            <a href="http://github.com/jawhitney" target="_blank"><i class="fab fa-github"></i></a>
         </div>
     </div>
 </header>
@@ -14,7 +14,7 @@
         </div>
         <div class="right">
             <h1>Jonathan Whitney</h1>
-            <p>Fast learning, self-motivated, and self-taught digital developer. Experienced in front-end/back-end development and design, responsive web design and web applications.</p>
+            <p>Fast-learning, self-motivated, and self-taught digital developer. Experienced in front-end/back-end development and design, responsive web design and web applications.</p>
         </div>
     </div>
 </section>
