--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <header>
     <div class="container flex">
-        <a id="logo" href="{{ site.baseurl }}/"><img src="assets/images/logo.png" alt="Logo" /></a>
+        <a id="logo" href="{{ site.baseurl }}/"><img src="assets/images/logo.svg" alt="Logo" /></a>
         <div>
-            <a href="http://linkedin.com/in/jonathanawhitney" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+            <a href="http://linkedin.com/in/jonathanawhitney" target="_blank"><i class="fab fa-linkedin"></i></a>
             <a href="http://github.com/jawhitney" target="_blank"><i class="fab fa-github"></i></a>
         </div>
     </div>
