--- a/css/style.scss
+++ b/css/style.scss
@@ -9,198 +9,7 @@
 @charset "utf-8";
 
 //== Includes
-@import "inc/variables";
-
-/* http://meyerweb.com/eric/tools/css/reset/
-   v2.0 | 20110126
-   License: none (public domain) */
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	vertical-align: baseline;
-    box-sizing: border-box;
-}
-
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-
-ol, ul {
-	list-style: none;
-}
-
-html {font-size: 16px;}
-
-body {
-    font-family: 'Fira Sans', sans-serif;
-    font-weight: 400;
-    line-height: 1.45;
-}
-
-p { margin-bottom: $spacer / 4; }
-
-h1, h2, h3, h4, h5 {
-    margin: $spacer / 2 0 $spacer / 4;
-    font-weight: 400;
-    line-height: 1.15;
-}
-
-h1 {
-    margin-top: 0;
-    font-size: 2.488em;
-}
-
-h2 { font-size: 2.074em; }
-h3 { font-size: 1.728em; }
-h4 { font-size: 1.44em; }
-h5 { font-size: 1.2em; }
-small, .text_small { font-size: 0.833em; }
-
-a {
-    color: $blue;
-    transition: color $timing $timing-function;
-
-    &:hover {
-        color: lighten($blue, $color-change);
-    }
-
-    &:visited,
-    &:active {
-        color: darken($blue, $color-change);
-    }
-}
-
-header,
-footer {
-    padding: $spacer / 2 0;
-}
-
-section {
-    padding: 0 $spacer / 2;
-}
-
-main {
-    section:not(:first-child) {
-        margin-bottom: $spacer;
-    }
-}
-
-header {
-    background-color: $blue;
-    text-align: center;
-
-    a {
-        display: inline-block;
-        max-width: 4 * $spacer;
-        color: white;
-
-        &:hover {
-            color: darken(white, $color-change);
-        }
-
-        &:visited,
-        &:active {
-            color: darken(white, 2 * $color-change);
-        }
-    }
-}
-
-#logo img {
-    width: 100%;
-    height: auto;
-}
-
-#hero {
-    padding: $spacer / 2;
-    background-color: $gray;
-    color: white;
-}
-
-.container {
-    margin: 0 auto;
-    width: 100%;
-    max-width: 1000px;
-}
-
-.flex {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-#hero .left {
-    margin-bottom: $spacer / 4;
-}
-
-header {
-    #logo {
-        margin-bottom: $spacer / 4;
-    }
-}
-
-@media only screen and (min-width: $md) {
-    .flex {
-        flex-direction: row;
-    }
-
-    header {
-        #logo {
-            margin-bottom: 0;
-            margin-right: auto;
-        }
-    }
-
-    #hero .left {
-        margin-bottom: 0;
-        margin-right: $spacer / 2;
-    }
-}
-
-#headshot {
-    max-width: 250px;
-    height: auto;
-    border-radius: 125px;
-}
-
-footer {
-    background-color: $gray;
-    color: white;
-    text-align: center;
-}
-
-.wrapper {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin: 0 -1 * $spacer / 4
-}
-
-article {
-    flex-grow: 1;
-    margin: 0 $spacer / 4;
-
-    > div {
-        display: flex;
-        flex-direction: row;
-
-        :first-child {
-            margin-right: auto;
-        }
-    }
-}
+@import "variables";
+@import "reset";
+@import "core";
+@import "type";
