--- a/_sass/_core.scss
+++ b/_sass/_core.scss
@@ -40,6 +40,7 @@ footer {
     background-color: $gray;
     color: white;
     text-align: center;
+    box-shadow: 0 50vh 0 50vh $gray;
 }
 
 main {
@@ -55,13 +56,61 @@ section {
 article {
     flex-grow: 1;
     margin: 0 $spacer / 4;
+    opacity: 0;
 
-    > div {
-        display: flex;
-        flex-direction: row;
+    &.loaded {
+        opacity: 1;
+        transition: opacity 4 * $timing $timing-function;
+    }
+}
 
-        :first-child {
-            margin-right: auto;
+.rating {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: $spacer / 8;
+
+    .value {
+        width: 1/3 * 100%;
+    }
+
+    .progress {
+        position: relative;
+        display: inline-block;
+        width: 2/3 * 100%;
+        height: $spacer / 2;
+
+        span {
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 100%;
+        }
+
+        span:nth-child(1) {
+            width: 100%;
+            background-color: $gray-light;
+        }
+
+        span:nth-child(2) {
+            width: 0%;
+            background-color: $blue;
+            opacity: 0;
+            transition: opacity 4 * $timing $timing-function,
+                        width 4 * $timing $timing-function;
+        }
+
+        span:nth-child(3) {
+            color: white;
+            text-shadow: 1px 1px 1px rgba($gray, 0.75);
+            left: auto;
+            right: $spacer / 8;
+        }
+    }
+
+    &.loaded {
+        .progress span:nth-child(2) {
+            opacity: 1;
         }
     }
 }
@@ -92,6 +141,7 @@ article {
 .wrapper {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
     justify-content: space-between;
     margin: 0 -1 * $spacer / 4
 }
@@ -112,6 +162,10 @@ article {
         margin-bottom: 0;
         margin-right: $spacer / 2;
     }
+
+    .wrapper {
+        flex-direction: row;
+    }
 }
 
 #logo img {
@@ -123,4 +177,38 @@ article {
     max-width: 250px;
     height: auto;
     border-radius: 125px;
+}
+
+.headline {
+    overflow: hidden;
+    margin-top: 0.5 * $spacer;
+    text-align: center;
+
+    span {
+        display: inline-block;
+        position: relative;
+        color: $gray-light;
+        text-transform: uppercase;
+        font-size: 1.5 * $font-size-base;
+
+        &::before,
+        &::after {
+            content: "";
+            position: absolute;
+            top: 50%;
+            width: 1000px;
+            height: 1px;
+            background-color: $gray-light;
+        }
+
+        &::before {
+            right: 100%;
+            margin-right: .78125rem;
+        }
+
+        &::after {
+            left: 100%;
+            margin-left: .78125rem;
+        }
+    }
 }
