--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -21,7 +21,10 @@ h1 {
 
 h2 { font-size: 2.074em; }
 h3 { font-size: 1.728em; }
-h4 { font-size: 1.44em; }
+h4 {
+    font-size: 1.44em;
+    color: $blue;
+}
 h5 { font-size: 1.2em; }
 small, .text_small { font-size: 0.833em; }
 
