Updated content / Updated animations

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
         </div>
         <div class="right">
             <h1>Jonathan Whitney</h1>
-            <p>Fast-learning, self-motivated, and self-taught digital developer. Experienced in front-end/back-end development and design, responsive web design and web applications.</p>
+            <p>Fast-learning, self-motivated, and self-taught digital developer. Experienced in front-end/back-end development and design, responsive web design, and web applications.</p>
         </div>
     </div>
 </section>
