--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,49 +7,47 @@
 <script id="templateresume" type="text/x-handlebars-template">
     {% raw %}
         {{#each entries}}
-            <div class="row">
-                <div id="headline-{{id}}" class="headline"><span>{{heading}}</span></div>
-                <div class="wrapper">
-                    {{#each content}}
-                        <article>
-                            {{#if heading}}
-                                <h4>{{heading}}</h4>
-                            {{/if}}
-                            {{#if subheading}}
-                                <h5>{{subheading}}</h5>
-                            {{/if}}
-                            {{#each text}}
-                                <p>{{this}}</p>
-                            {{/each}}
-                            {{#if list}}
-                                <ul>
-                                    {{#each list}}
-                                        <li>{{this}}</li>
-                                    {{/each}}
-                                </ul>
-                            {{/if}}
-                            {{#if ratings}}
-                                {{#each ratings}}
-                                    <div class="rating" data-rating="{{rating}}">
-                                        <span class="value">{{item}}&nbsp;</span>
-                                        <div class="progress">
-                                            <span></span>
-                                            <span></span>
-                                            <span>{{rating}}%</span>
-                                        </div>
-                                    </div>
+            <div id="headline-{{id}}" class="headline"><span>{{heading}}</span></div>
+            <div class="{{#if multiColumn}}multi-column{{/if}}">
+                {{#each content}}
+                    <article>
+                        {{#if heading}}
+                            <h4>{{heading}}</h4>
+                        {{/if}}
+                        {{#if subheading}}
+                            <h5>{{subheading}}</h5>
+                        {{/if}}
+                        {{#each text}}
+                            <p>{{this}}</p>
+                        {{/each}}
+                        {{#if list}}
+                            <ul>
+                                {{#each list}}
+                                    <li>{{this}}</li>
                                 {{/each}}
-                            {{/if}}
-                            {{#if links}}
-                                <ul>
-                                    {{#each links}}
-                                        <li>{{link url description}}</li>
-                                    {{/each}}
-                                </ul>
-                            {{/if}}
-                        </article>
-                    {{/each}}
-                </div>
+                            </ul>
+                        {{/if}}
+                        {{#if ratings}}
+                            {{#each ratings}}
+                                <div class="rating" data-rating="{{rating}}">
+                                    <span class="value">{{item}}&nbsp;</span>
+                                    <div class="progress">
+                                        <span></span>
+                                        <span></span>
+                                        <span>{{rating}}%</span>
+                                    </div>
+                                </div>
+                            {{/each}}
+                        {{/if}}
+                        {{#if links}}
+                            <ul>
+                                {{#each links}}
+                                    <li>{{link url description}}</li>
+                                {{/each}}
+                            </ul>
+                        {{/if}}
+                    </article>
+                {{/each}}
             </div>
         {{/each}}
     {% endraw %}
