--- a/_sass/_core.scss
+++ b/_sass/_core.scss
@@ -61,8 +61,8 @@ section {
 article {
     flex-grow: 1;
     opacity: 0;
-    transition: transform $timing $timing-function,
-                opacity $timing $timing-function;
+    transition: transform $timing $timing-function-bounce,
+                opacity $timing $timing-function-bounce;
 }
 
 .multi-column {
@@ -129,12 +129,12 @@ div:not(.multi-column) > article {
         span:nth-child(2) {
             width: 0%;
             background-color: $blue;
-            transition: width $timing $timing-function;
+            transition: width $timing $timing-function-bounce;
         }
 
         span:nth-child(3) {
             color: white;
-            text-shadow: 1px 1px 1px rgba($gray, 0.75);
+            text-shadow: 0.5px 0.5px 0.5px rgba($gray, 0.5);
             left: auto;
             right: $spacer / 8;
         }
@@ -161,8 +161,8 @@ div:not(.multi-column) > article {
 .left,
 .right {
     opacity: 0;
-    transition: opacity $timing $timing-function,
-                transform $timing $timing-function;
+    transition: opacity $timing $timing-function-bounce,
+                transform $timing $timing-function-bounce;
 
     &.loaded {
         opacity: 1;
@@ -234,7 +234,7 @@ div:not(.multi-column) > article {
         text-transform: uppercase;
         font-size: 1.5 * $font-size-base;
         opacity: 0;
-        transition: opacity $timing $timing-function;
+        transition: opacity $timing $timing-function-bounce;
 
         &::before,
         &::after {
@@ -244,7 +244,7 @@ div:not(.multi-column) > article {
             width: 0;
             height: 1px;
             background-color: $gray-light;
-            transition: width 2 * $timing $timing-function;
+            transition: width 2 * $timing $timing-function-bounce;
         }
 
         &::before {
@@ -267,5 +267,103 @@ div:not(.multi-column) > article {
                 width: 500px;
             }
         }
+    }
+}
+
+.cards {
+    margin-bottom: -1 * $spacer / 4
+}
+
+.card {
+    position: relative;
+    display: inline-block;
+    margin: $spacer / 4 0;
+    padding: 0 $spacer / 4;
+    width: 100%;
+    opacity: 0;
+    transition: opacity $timing $timing-function-bounce;
+
+    a {
+        position: relative;
+        display: inline-block;
+        padding-top: (525/1000) * 100%;
+        width: 100%;
+        height: 0;
+
+        &::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 1;
+            width: 100%;
+            height: 100%;
+            background-color: rgba($blue, 0.9);
+            opacity: 0;
+            transition: opacity $timing / 2 $timing-function;
+        }
+    }
+
+    img, h5, p {
+        position: absolute;
+    }
+
+    img {
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        z-index: 0;
+    }
+
+    h5, p {
+        z-index: 2;
+        margin: 0;
+        padding: 0;
+        opacity: 0;
+        width: 100%;
+        text-align: center;
+        transition: top $timing / 2 $timing-function-bounce,
+                    bottom $timing / 2 $timing-function-bounce;
+    }
+
+    h5 {
+        top: $spacer / 2;
+        color: white;
+    }
+
+    p {
+        bottom: $spacer / 2;
+        color: $gray-light;
+    }
+
+    &:hover {
+        a::before {
+            opacity: 1;
+        }
+
+        h5, p {
+            opacity: 1;
+        }
+
+        h5 {
+            top: calc(50% - #{$spacer / 2});
+        }
+
+        p {
+            bottom: calc(50% - #{$spacer / 2});
+        }
+    }
+}
+
+article.loaded {
+    .card {
+        opacity: 1;
+    }
+}
+
+@media only screen and (min-width: $md) {
+    .card {
+        width: 1/3 * 100%;
     }
 }
