Updated visited link styles

--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -38,6 +38,6 @@ a {
 
     &:visited,
     &:active {
-        color: darken($blue, $color-change);
+        color: lighten($blue, 2 * $color-change);
     }
 }
