--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -6,10 +6,12 @@ body {
     line-height: 1.45;
 }
 
-p { margin-bottom: $spacer / 4; }
+p:not(:last-child) {
+    margin-bottom: $spacer / 4;
+}
 
 h1, h2, h3, h4, h5 {
-    margin: $spacer / 2 0 $spacer / 4;
+    margin: 0 0 $spacer / 4 0;
     font-weight: 400;
     line-height: 1.15;
 }
