Added link to codepen

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,9 @@
     <div class="container flex">
         <a id="logo" href="{{ site.baseurl }}/"><img src="assets/images/logo.svg" alt="Logo" /></a>
         <div>
-            <a href="http://linkedin.com/in/jonathanawhitney" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="http://github.com/jawhitney" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="http://linkedin.com/in/jonathanawhitney"><i class="fab fa-linkedin"></i></a>
+            <a href="http://github.com/jawhitney"><i class="fab fa-github"></i></a>
+            <a href="https://codepen.io/jawhitney/"><i class="fab fa-codepen"></i></a>
         </div>
     </div>
 </header>
